--- a/ElasticAppWeb/src/main/webapp/theme/style.css
+++ b/ElasticAppWeb/src/main/webapp/theme/style.css
@@ -60,7 +60,9 @@ span#credits{
 }
 
 div#pagecontent{
-    width:100%;
+    width:90%;
     height:85%;
+    margin-left: 5%;
+    overflow: auto;
 }
 
