--- a/ElasticAppWeb/src/main/webapp/style/requestUpdate.css
+++ b/ElasticAppWeb/src/main/webapp/style/requestUpdate.css
@@ -2,11 +2,12 @@
     display: inline-block;
     width:15%;
     margin-left: 15%;
+    white-space: nowrap;
 }
 .headerValue{
     display: inline-block;
     margin-left: 5%;
-
+	white-space: nowrap;
 }
 
 #homeContainer {
